# tl

./: .gitignore  Cargo.toml  README.md  TODO.md  main.tl
docs/: Main.md  Syntax.md  Types.md
examples/: basic.rs  basic.tl  enum.rs  example.tl  function_definition.rs  object.rs  object.tl  repl.rs  runtime.rs  runtime.tl  serde.rs  serde.tl  timed.rs
logger/: Cargo.toml
logger/examples/: basic.rs  hint.rs
logger/examples/highlighted/: bad_code.rs  main.rs
logger/src/: helpers.rs  level.rs  lib.rs  location.rs  utils.rs
src/: ast.rs  error.rs  eval.rs  lib.rs  main.rs  source.rs  tests.rs  tokenizer.rs  utils.rs
src/ast/: parser.rs  types.rs
src/parser/: mod.rs
src/parser/ast/: array.rs  binary_op.rs  expr.rs  field_access.rs  fn.rs  fn_decl.rs  ident.rs  interpolated_path.rs  interpolated_string.rs  let.rs  mod.rs  object.rs  parser.rs  path.rs  pretty_print.rs  types.rs
src/parser/lexer/: mod.rs  types.rs
src/parser/tokenizer/: mod.rs  parser.rs  types.rs
src/runtime/: binary_op.rs  call.rs  expr.rs  mod.rs  serde.rs  stdlib.rs  types.rs
src/tests/: ast.rs  mod.rs  parser.rs  runtime.rs  tokenizer.rs  utils.rs
src/tokenizer/: mod.rs  parser.rs  types.rs
vscode-ext/: README.md  language-configuration.json  package.json  test.tl
vscode-ext/syntaxes/: tl-markdown-injection.json  tl.tmLanguage.json
