[package]
name = "tl"
version = "0.1.0"
edition = "2021"

[features]
default = ["serde", "fs"]
fs = []

serde = ["dep:serde"]
toml = ["serde", "dep:toml"]

[dependencies]
logger = { path = "../logger" }

serde = { version = "1.0.215", features = ["derive"], optional = true }
toml = { version = "0.8.19", optional = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
