[package]
name = "tl"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["dylib", "rlib"]

[features]
default = ["serde", "fs"]
fs = []

serde = ["dep:serde"]
toml = ["serde", "dep:toml"]

[dependencies]
serde = { workspace = true, optional = true }
toml = { workspace = true, optional = true }

logger = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4.1"

[lints]
workspace = true
