[package]
name = "tl"
version = "0.1.0"
edition.workspace = true

[features]
default = ["serde", "fs"]
fs = []

serde = ["dep:serde"]
toml = ["serde", "dep:toml"]

[dependencies]
serde = { workspace = true, optional = true }
toml = { workspace = true, optional = true }

miette.workspace = true
thiserror.workspace = true

colored.workspace = true

[dev-dependencies]
pretty_assertions = "1.4.1"

[lints]
workspace = true
